# python-project-50

./: Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
gendiff/: __init__.py  cli.py  gendiff.py  generate.py  parser.py
gendiff/formatters/: __init__.py  json.py  normal.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_generate_diff.py
tests/fixtures/: correct4.txt
